@@ -1,3 +1,3 @@
 FROM scratch
 COPY target/badge /badge
-ENTRYPOINT [ "/badge", "-Djava.io.tmpdir=/", "-Dspring.profiles.active=production" ]
+ENTRYPOINT [ "/badge", "-Djava.io.tmpdir=/", "-Dspring.profiles.active=production", "-XX:+PrintGC", "-XX:+VerboseGC", "--expert-options-all", "-Xmn32m", "-Xmx64m" ]
